[gd_scene load_steps=36 format=3 uid="uid://bjcn86x7vrd6"]

[ext_resource type="Script" uid="uid://bv45y0be53vxg" path="res://scenes/casino/casino_menu.gd" id="1_tl5e1"]
[ext_resource type="Texture2D" uid="uid://bd35p3hb6ti81" path="res://assets/casino/temp/casino_temp.jpg" id="2_go3vn"]
[ext_resource type="Texture2D" uid="uid://dserxt6krrf7e" path="res://assets/casino/coin.png" id="3_20ruo"]
[ext_resource type="Texture2D" uid="uid://cv55asmmy332" path="res://assets/casino/chip.png" id="4_go3vn"]
[ext_resource type="PackedScene" uid="uid://b0flhrlw7t57t" path="res://scenes/player/player.tscn" id="4_sbc11"]

[sub_resource type="LabelSettings" id="LabelSettings_go3vn"]
outline_size = 5
outline_color = Color(1, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_nwq0x"]
font_size = 60
shadow_size = 10
shadow_color = Color(0, 0, 0, 0.69803923)

[sub_resource type="AtlasTexture" id="AtlasTexture_isxjc"]
atlas = ExtResource("3_20ruo")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bprva"]
atlas = ExtResource("3_20ruo")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dwfye"]
atlas = ExtResource("3_20ruo")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3e6ok"]
atlas = ExtResource("3_20ruo")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2xots"]
atlas = ExtResource("3_20ruo")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_owagg"]
atlas = ExtResource("3_20ruo")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6lwmj"]
atlas = ExtResource("3_20ruo")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6aeu7"]
atlas = ExtResource("3_20ruo")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qe3yb"]
atlas = ExtResource("3_20ruo")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5l7xq"]
atlas = ExtResource("3_20ruo")
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_72n7n"]
atlas = ExtResource("3_20ruo")
region = Rect2(160, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6kku"]
atlas = ExtResource("3_20ruo")
region = Rect2(176, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_2fyga"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_isxjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bprva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dwfye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3e6ok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xots")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_owagg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6lwmj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6aeu7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qe3yb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5l7xq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_72n7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6kku")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_mj7ai"]
font_size = 30
shadow_size = 5
shadow_color = Color(0, 0, 0, 0.6)

[sub_resource type="AtlasTexture" id="AtlasTexture_2fyga"]
atlas = ExtResource("4_go3vn")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mj7ai"]
atlas = ExtResource("4_go3vn")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwwij"]
atlas = ExtResource("4_go3vn")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ax0sc"]
atlas = ExtResource("4_go3vn")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqypd"]
atlas = ExtResource("4_go3vn")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0hhp"]
atlas = ExtResource("4_go3vn")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbcrj"]
atlas = ExtResource("4_go3vn")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_afvhm"]
atlas = ExtResource("4_go3vn")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6gu7"]
atlas = ExtResource("4_go3vn")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_47hrb"]
atlas = ExtResource("4_go3vn")
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_m51fu"]
atlas = ExtResource("4_go3vn")
region = Rect2(160, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_741wq"]
atlas = ExtResource("4_go3vn")
region = Rect2(176, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_mj7ai"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2fyga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mj7ai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwwij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ax0sc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqypd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0hhp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbcrj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_afvhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6gu7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_47hrb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m51fu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_741wq")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_fwwij"]
font_size = 30
shadow_size = 5
shadow_color = Color(0, 0, 0, 0.6)

[node name="Casino_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tl5e1")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_go3vn")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -388.0
offset_right = 388.0
offset_bottom = 84.0
grow_horizontal = 2
color = Color(0, 0, 0, 0.78431374)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -216.0
offset_top = -148.0
offset_right = -60.0
offset_bottom = -47.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.2799997, 2.2799997)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="BlackJack" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play Blackjack"

[node name="Exchange" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Currency Exchange"

[node name="CasinoExit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit Casino"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="LessCoins" type="Button" parent="MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "-"

[node name="NumCoinsToExchange" type="Label" parent="MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = " Coins"
label_settings = SubResource("LabelSettings_go3vn")

[node name="MoreCoins" type="Button" parent="MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "+"

[node name="ConfirmExchange" type="Button" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "Exchange for Chips"

[node name="CancelExchange" type="Button" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "Cancel
"

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -380.5
offset_right = 380.5
offset_bottom = 83.0
grow_horizontal = 2
text = "WELCOME TO THE CASINO"
label_settings = SubResource("LabelSettings_nwq0x")

[node name="Coins" type="AnimatedSprite2D" parent="."]
position = Vector2(47, 46)
scale = Vector2(4.25, 4.25)
sprite_frames = SubResource("SpriteFrames_2fyga")
frame_progress = 0.35727918

[node name="NumCoins" type="Label" parent="."]
layout_mode = 0
offset_left = 83.0
offset_top = 24.0
offset_right = 151.0
offset_bottom = 66.0
text = "1000"
label_settings = SubResource("LabelSettings_mj7ai")

[node name="Chips" type="AnimatedSprite2D" parent="."]
position = Vector2(49, 104.00001)
scale = Vector2(3.8125, 3.8125)
sprite_frames = SubResource("SpriteFrames_mj7ai")
frame_progress = 0.94635403

[node name="NumChips" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.021000002
anchor_bottom = 0.021000002
offset_left = 84.0
offset_top = 91.0
offset_right = 111.67999
offset_bottom = 110.32
text = "0"
label_settings = SubResource("LabelSettings_fwwij")

[node name="Player" parent="." instance=ExtResource("4_sbc11")]
position = Vector2(-13, -15)

[connection signal="pressed" from="MarginContainer/VBoxContainer/BlackJack" to="." method="_on_black_jack_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exchange" to="." method="_on_exchange_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CasinoExit" to="." method="_on_casino_exit_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/HBoxContainer/LessCoins" to="." method="_on_less_coins_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/HBoxContainer/MoreCoins" to="." method="_on_more_coins_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/ConfirmExchange" to="." method="_on_confirm_exchange_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/CancelExchange" to="." method="_on_cancel_exchange_pressed"]
